--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,8 @@ Homepage = "https://github.com/Omer-Dagry/RabbitMQUtils"
 Issues = "https://github.com/Omer-Dagry/RabbitMQUtils/issues"
 
 [project]
-name = "rabbitmq_utils"
-version = "1.0.0"
+name = "aio-rabbitmq-utils"
+version = "1.0.1"
 description = "A package for async communication with RabbitMQ"
 keywords = ["rabbitmq", "pika", "aio", "async"]
 
@@ -29,8 +29,8 @@ dynamic = ["dependencies"]
 dependencies = { file = ["requirements.txt"] }
 
 [tool.setuptools.packages.find]
-where = ["rabbitmq_utils"]
-include = ["*"]
+where = ["."]
+include = ["aio_rabbitmq_utils"]
 exclude = []
 namespaces = false
 
